...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/text_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_weight="1"
            android:hint="@string/text_expense_amount"
            app:prefixText="@string/text_expense_rupees">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_weight="1"
            android:hint="@string/text_expense_transaction_type"
            app:boxBackgroundColor="@color/background">

            <AutoCompleteTextView
                android:id="@+id/et_transactionType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="none"
                android:labelFor="@id/et_transactionType" />

...
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/text_expense_tag"
        app:boxBackgroundColor="@color/background">

        <AutoCompleteTextView
            android:id="@+id/et_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="none"
            android:labelFor="@id/et_tag" />

...
        android:focusable="true"
        android:hint="@string/text_expense_when"
        app:endIconDrawable="@drawable/ic_baseline_calendar"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/text_expense_note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="text"
            android:maxLength="240"
            android:maxLines="3" />
...
